--- a/intro-slides.Rmd
+++ b/intro-slides.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "The Tax Divide in R and Extending R"
+title: "Chicago R User Group: The Tax Divide in R and Extending R"
 author: " "
 date: "March 29th, 2018"
 output:
@@ -14,13 +14,14 @@ knitr::opts_chunk$set(echo = FALSE)
 ```
 
 
-## Tonights talks
+## Tonights Double Feature {.columns-2}
 
-A *Double Feature*:
 
-We are excited to present two interesting and timely talks: Sandhya Kambhampati's "The Property Tax Divide analysis with R" and Dirk Eddelbuettel on "Extending R" for performance.
+- Sandhya Kambhampati's "The Property Tax Divide analysis with R"
 
-Special Thanks to IBM for sponsoring this meetup and making it possible!
+- Dirk Eddelbuettel on "Extending R".
+
+Thanks to IBM for sponsoring this meetup and making it possible!
 
 ```{r, out.width = "400px"}
 path <- paste0(getwd(), "/images/IBM-Logo.jpg")
