--- a/intro-slides.Rmd
+++ b/intro-slides.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Chicago R User Group News
 
-Leading up to this meetup, we just past 3000 meetup members!
+Leading up to this meetup, we reached 3000 members!
 
 
 ```{r, out.width = "700px", , fig.align='center'}
@@ -23,7 +23,7 @@ path1 <- paste0(getwd(), "/images/CRUG-members.png")
 knitr::include_graphics(path1)
 ```
 
-## Training Session – R From the Beginning 
+## Training Session - R From the Beginning 
 
 Joe Cursio and CRUG organizers will show you how to install R, how to install the very useful RStudio, and show some of the usefulness of R. Bring your laptop, and we’ll bring the wifi, power for your computer, and power for you (free coffee and pizza).
 
@@ -47,7 +47,7 @@ knitr::include_graphics(path)
 
 
 
-# Looking for Employees or Consultants?
+# Looking for Employees / Consultants?
 
 
 ## R Consortium News {.smaller .columns-2}
@@ -59,7 +59,7 @@ knitr::include_graphics(path1)
 ```
 
 
-```{r, out.width = "250px", fig.align='center'}
+```{r, out.width = "270px", fig.align='center'}
 path2 <- paste0(getwd(), "/images/R-LadiesGlobal.png")
 knitr::include_graphics(path2)
 ```
@@ -75,34 +75,39 @@ The diversified voice of R-Ladies, speaking not only as a group representing gen
 
 The R Consortium invite all in the R community to congratulate R-Ladies on this milestone.
 
-## Chicago R Ladies
+## R-Ladies Chicago {.columns-2}
 
-Thank you for attending and for all the work you do to support the R community!
+Thank you for attending and for all the work you do to support the Chicago R community!
 
-For more information follow them on meetup:
+For more information follow their meetup:
 
 [https://www.meetup.com/rladies-chicago/](https://www.meetup.com/rladies-chicago/)
 
-And on Twitter:
+And Twitter: @[RLadiesChicago](https://twitter.com/RLadiesChicago)
 
-@RLadiesChicago
+```{r, out.width = "270px", fig.align='center'}
+path2 <- paste0(getwd(), "/images/R-LadiesGlobal.png")
+knitr::include_graphics(path2)
+```
 
 
 
 ## Extending R Raffle!
 
-```{r, out.width = "350px"}
+First to answer our trivia question about R gets a free copy of the book!
+
+```{r, out.width = "325px"}
 path <- paste0(getwd(), "/images/Extending-R.jpg")
 knitr::include_graphics(path)
 ```
 
 
-## Tonights Double Feature {.columns-2}
+## Tonight's Double Feature {.columns-2}
 
 
-- Sandhya Kambhampati's "The Property Tax Divide analysis with R"
+- Sandhya Kambhampati's **"The Tax Divide analysis with R"**
 
-- Dirk Eddelbuettel on "Extending R".
+- Dirk Eddelbuettel on **"Extending R".**
 
 Thanks to IBM for sponsoring this meetup and making it possible!
 
